Fixed a gap between content and header that was slightly too large

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -4,8 +4,12 @@
 	padding: 0;
 }
 
-.header .container {
+.header > .container {
 	margin-bottom: 0;
+}
+
+.wrapper > .container {
+	padding-top: 30px;
 }
 
 .posts .dl-horizontal dd {
